syntax = "proto3";

package autonatv2.pbv2;

message Message {
    oneof msg {
        DialRequest dialRequest   = 1;
        DialResponse dialResponse = 2;
        DialDataRequest dialDataRequest = 3;
        DialDataResponse dialDataResponse = 4;
    }
}

message DialRequest {
    repeated bytes addrs = 1;
    fixed64 nonce = 2;
}


message DialDataRequest {
    uint32 addrIdx = 1;
    uint64 numBytes = 2;
}


enum DialStatus {
    E_DIAL_REFUSED  = 0;
    E_DIAL_ERROR    = 100;
    E_ATTEMPT_ERROR = 101;
    OK              = 200;
}


message DialResponse {
    enum ResponseStatus {
        E_INTERNAL_ERROR   = 0;
        E_REQUEST_REJECTED = 100; 
        ResponseStatus_OK  = 200; 
    }

    ResponseStatus status = 1;
    uint32 addrIdx        = 2; 
    DialStatus dialStatus = 3;
}


message DialDataResponse {
    bytes data = 1;
}


message DialAttempt {
    fixed64 nonce = 1;
}